--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ diesel_migrations = "1.4"
 dotenv = "0.15.0"
 chrono = "0.4"
 cronjob = "0.3.17"
+rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
