--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenv = "0.15.0"
 chrono = "0.4"
 cronjob = "0.3.17"
 rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
+telegram_notifyrs = "0.1.3"
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
