cronjob update market price

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,4 @@
 DATABASE_URL=db/db.sqlite
 TELEGRAM_BOT_TOKEN=<bot_token>
 TELEGRAM_CHAT_ID=<chat_id>
+COINMARKETCAP_API_KEY=<coinmarketcap_api_key>
