--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ chrono = "0.4"
 cronjob = "0.3.17"
 rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
 telegram_notifyrs = "0.1.3"
+reqwest = { version = "0.11", features = ["json"] }
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
